--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticalTest01Var04"
         tools:targetApi="31">
+        <service
+            android:name=".PracticalTest01Var04Service"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity
+            android:name=".PracticalTest01Var04SecondaryActivity"
+            android:exported="false" />
         <activity
             android:name=".PracticalTest01Var04MainActivity"
             android:exported="true">
